; ModuleID = '/home/carl/AnghaBench/linux/tools/usb/usbip/libsrc/extr_names.c_names_class.c'
source_filename = "/home/carl/AnghaBench/linux/tools/usb/usbip/libsrc/extr_names.c_names_class.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.class = type { i64, i8*, %struct.class* }

@classes = common dso_local global %struct.class** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @names_class(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca %struct.class*, align 8
  store i64 %0, i64* %3, align 8
  %5 = load %struct.class**, %struct.class*** @classes, align 8
  %6 = load i64, i64* %3, align 8
  %7 = call i64 @hashnum(i64 %6)
  %8 = getelementptr inbounds %struct.class*, %struct.class** %5, i64 %7
  %9 = load %struct.class*, %struct.class** %8, align 8
  store %struct.class* %9, %struct.class** %4, align 8
  br label %10

10:                                               ; preds = %24, %1
  %11 = load %struct.class*, %struct.class** %4, align 8
  %12 = icmp ne %struct.class* %11, null
  br i1 %12, label %13, label %28

13:                                               ; preds = %10
  %14 = load %struct.class*, %struct.class** %4, align 8
  %15 = getelementptr inbounds %struct.class, %struct.class* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* %3, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %13
  %20 = load %struct.class*, %struct.class** %4, align 8
  %21 = getelementptr inbounds %struct.class, %struct.class* %20, i32 0, i32 1
  %22 = load i8*, i8** %21, align 8
  store i8* %22, i8** %2, align 8
  br label %29

23:                                               ; preds = %13
  br label %24

24:                                               ; preds = %23
  %25 = load %struct.class*, %struct.class** %4, align 8
  %26 = getelementptr inbounds %struct.class, %struct.class* %25, i32 0, i32 2
  %27 = load %struct.class*, %struct.class** %26, align 8
  store %struct.class* %27, %struct.class** %4, align 8
  br label %10

28:                                               ; preds = %10
  store i8* null, i8** %2, align 8
  br label %29

29:                                               ; preds = %28, %19
  %30 = load i8*, i8** %2, align 8
  ret i8* %30
}

declare dso_local i64 @hashnum(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
